--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@
 /*이렇게 하면 div내부의 클래스 이름이 gird인 모든 div만 적용*/
 
 .grid div {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
+    margin-left: 6px;
     background-color: lightpink;
     font-size: 45px;
     text-align: center;
